--- a/N424_Transformer/n424a_Transformer.ipynb
+++ b/N424_Transformer/n424a_Transformer.ipynb
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "gDsXneJ_biSe"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -79,9 +79,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zUi1f898bjvm",
-        "outputId": "a81785b6-f3f9-4386-9ff7-0a3db09ee850"
+        "outputId": "85037e04-2381-4949-b55e-d02cfba80abb"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +98,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 2
         }
       ]
     },
@@ -133,7 +133,7 @@
       "metadata": {
         "id": "oZzUGNtybdfc"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "0O4AoOj2TCU6"
       },
@@ -194,7 +194,7 @@
         "    \n",
         "    # scale matmul_qk\n",
         "    dk = tf.cast(tf.shape(k)[-1], tf.float32)\n",
-        "    scaled_attention_logits = matmul_qk / tf.math.\"\"\"input your code(A)\"\"\"(dk)\n",
+        "    scaled_attention_logits = matmul_qk / tf.math.sqrt(dk)    ##       A = sqrt\n",
         "\n",
         "    \"\"\"\n",
         "    mask가 있을 경우 masking된 자리(mask=1)에는 (-inf)에 해당하는 절댓값이 큰 음수 -1e9(=-10억)을 더해줍니다.\n",
@@ -207,9 +207,9 @@
         "        \n",
         "    # softmax is normalized on the last axis (seq_len_k) so that the scores\n",
         "    # add up to 1.\n",
-        "    attention_weights = tf.nn.\"\"\"input your code(B)\"\"\"(scaled_attention_logits, axis=-1)  # (..., seq_len_q, seq_len_k)\n",
+        "    attention_weights = tf.nn.softmax(scaled_attention_logits, axis=-1)  # (..., seq_len_q, seq_len_k) /     B = softmax\n",
         "    \n",
-        "    output = tf.\"\"\"input your code(C)\"\"\"(attention_weights, v)  # (..., seq_len_q, depth_v)\n",
+        "    output = tf.matmul(attention_weights, v)  # (..., seq_len_q, depth_v) /    C = matmul\n",
         "    \n",
         "    return output, attention_weights"
       ]
@@ -269,7 +269,7 @@
       "metadata": {
         "id": "fsuAwzvwbgb1"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -283,11 +283,11 @@
         "\n",
         "        assert self.d_model % self.num_heads == 0\n",
         "\n",
-        "        self.depth = \"\"\"input your code(A)\"\"\"\n",
+        "        self.depth = self.d_model // self.num_heads  ## A = self.d_model // self.num_heads\n",
         "\n",
-        "        self.wq = tf.keras.layers.Dense(\"\"\"ipnut your code (B)\"\"\")\n",
-        "        self.wk = tf.keras.layers.Dense(\"\"\"ipnut your code (B)\"\"\")\n",
-        "        self.wv = tf.keras.layers.Dense(\"\"\"ipnut your code (B)\"\"\")\n",
+        "        self.wq = tf.keras.layers.Dense(self.d_model)   ## B = self.d_model\n",
+        "        self.wk = tf.keras.layers.Dense(self.d_model)\n",
+        "        self.wv = tf.keras.layers.Dense(self.d_model)\n",
         "\n",
         "        self.dense = tf.keras.layers.Dense(kargs['d_model'])\n",
         "\n",
@@ -327,7 +327,7 @@
       "metadata": {
         "id": "i1fiUBlybbQM"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -369,7 +369,7 @@
       "metadata": {
         "id": "ZY6JRIMYcAtC"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "6bm0eI4FcDFq"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
       "metadata": {
         "id": "_LjmMJg-wiqh"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "yBQGLAWnvQpg"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -536,15 +536,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mqLwHSR-tkZs",
-        "outputId": "ca36eeab-3340-45f8-dee9-131c0c341a5c"
+        "outputId": "50bf0055-cb8c-4ba3-f111-50232825f5be"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Loading data...\n"
+            "Loading data...\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/imdb.npz\n",
+            "17465344/17464789 [==============================] - 0s 0us/step\n",
+            "17473536/17464789 [==============================] - 0s 0us/step\n"
           ]
         }
       ]
@@ -558,7 +561,7 @@
       "metadata": {
         "id": "q4w_U2Ajtt_v"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -581,7 +584,7 @@
       "metadata": {
         "id": "_n4QWMruuyO7"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -599,7 +602,7 @@
       "metadata": {
         "id": "1oaHP-TVtSCM"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -623,35 +626,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lvz4wIJtuhv9",
-        "outputId": "566c75d2-d2a5-45bb-be1d-a0dd0e1a32d9"
+        "outputId": "7119104c-e6b3-43b3-f51d-977d54e5053d"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "1406/1407 [============================>.] - ETA: 0s - loss: 0.5036 - accuracy: 0.7409\n",
-            "Epoch 00001: val_accuracy improved from -inf to 0.81520, saving model to weights.h5\n",
-            "1407/1407 [==============================] - 92s 63ms/step - loss: 0.5036 - accuracy: 0.7409 - val_loss: 0.3885 - val_accuracy: 0.8152\n",
+            "1406/1407 [============================>.] - ETA: 0s - loss: 0.5121 - accuracy: 0.7362\n",
+            "Epoch 1: val_accuracy improved from -inf to 0.80480, saving model to weights.h5\n",
+            "1407/1407 [==============================] - 50s 31ms/step - loss: 0.5121 - accuracy: 0.7362 - val_loss: 0.4276 - val_accuracy: 0.8048\n",
             "Epoch 2/3\n",
-            "1406/1407 [============================>.] - ETA: 0s - loss: 0.2869 - accuracy: 0.8829\n",
-            "Epoch 00002: val_accuracy improved from 0.81520 to 0.83840, saving model to weights.h5\n",
-            "1407/1407 [==============================] - 88s 62ms/step - loss: 0.2869 - accuracy: 0.8829 - val_loss: 0.3645 - val_accuracy: 0.8384\n",
+            "1405/1407 [============================>.] - ETA: 0s - loss: 0.2957 - accuracy: 0.8766\n",
+            "Epoch 2: val_accuracy improved from 0.80480 to 0.82320, saving model to weights.h5\n",
+            "1407/1407 [==============================] - 41s 29ms/step - loss: 0.2956 - accuracy: 0.8767 - val_loss: 0.4288 - val_accuracy: 0.8232\n",
             "Epoch 3/3\n",
-            "1406/1407 [============================>.] - ETA: 0s - loss: 0.1556 - accuracy: 0.9407\n",
-            "Epoch 00003: val_accuracy did not improve from 0.83840\n",
-            "1407/1407 [==============================] - 87s 62ms/step - loss: 0.1556 - accuracy: 0.9407 - val_loss: 0.5133 - val_accuracy: 0.8236\n"
+            "1405/1407 [============================>.] - ETA: 0s - loss: 0.1619 - accuracy: 0.9382\n",
+            "Epoch 3: val_accuracy did not improve from 0.82320\n",
+            "1407/1407 [==============================] - 41s 29ms/step - loss: 0.1620 - accuracy: 0.9381 - val_loss: 0.4567 - val_accuracy: 0.8224\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "0JyD-x3Ix_Rd"
       },
