--- a/N432/N432a_Beyond_Classification.ipynb
+++ b/N432/N432a_Beyond_Classification.ipynb
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "c61d2a2f",
       "metadata": {
         "id": "c61d2a2f"
@@ -48,7 +48,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "c4498487",
       "metadata": {
         "id": "c4498487"
@@ -72,10 +72,10 @@
         "\n",
         "out, out1, out2, out3, out4 = down_stack(i)\n",
         "\n",
-        "# A = \n",
-        "# B = \n",
-        "# C = \n",
-        "# D = \n",
+        "A = 512\n",
+        "B = 256\n",
+        "C = 128\n",
+        "D = 64\n",
         "\n",
         "out = tf.keras.layers.Conv2DTranspose(A, 3,strides=2,padding='same')(out)\n",
         "out = tf.keras.layers.Add()([out,out1])\n",
@@ -93,6 +93,68 @@
         "out = tf.keras.layers.Dense(3,activation='softmax')(out)\n",
         "\n",
         "unet_model = tf.keras.Model(inputs=[i], outputs=[out])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out, out1, out2, out3, out4"
+      ],
+      "metadata": {
+        "id": "AOGfO3W2Ma3w",
+        "outputId": "bdb62a46-bc94-469b-cfc6-fe83e648213e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "AOGfO3W2Ma3w",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<KerasTensor: shape=(None, 8, 8, 512) dtype=float32 (created by layer 'model')>,\n",
+              " <KerasTensor: shape=(None, 16, 16, 512) dtype=float32 (created by layer 'model')>,\n",
+              " <KerasTensor: shape=(None, 32, 32, 256) dtype=float32 (created by layer 'model')>,\n",
+              " <KerasTensor: shape=(None, 64, 64, 128) dtype=float32 (created by layer 'model')>,\n",
+              " <KerasTensor: shape=(None, 128, 128, 64) dtype=float32 (created by layer 'model')>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "out, out1, out2, out3, out4"
+      ],
+      "metadata": {
+        "id": "5-1Qt9f0MyNL",
+        "outputId": "8b4d9561-301f-4406-f7d6-1e7ba850ef29",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "5-1Qt9f0MyNL",
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<KerasTensor: shape=(None, 128, 128, 3) dtype=float32 (created by layer 'dense')>,\n",
+              " <KerasTensor: shape=(None, 16, 16, 512) dtype=float32 (created by layer 'model_6')>,\n",
+              " <KerasTensor: shape=(None, 32, 32, 256) dtype=float32 (created by layer 'model_6')>,\n",
+              " <KerasTensor: shape=(None, 64, 64, 128) dtype=float32 (created by layer 'model_6')>,\n",
+              " <KerasTensor: shape=(None, 128, 128, 64) dtype=float32 (created by layer 'model_6')>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
       ]
     }
   ],
